[gd_scene load_steps=43 format=3 uid="uid://babl7en2jab02"]

[ext_resource type="Script" uid="uid://djtnpsch66lba" path="res://Objects/Bombs/big_bomb.gd" id="1_c6yx4"]
[ext_resource type="Texture2D" uid="uid://b1y3v6t4ka58q" path="res://Resources/Art/sonar-green.png" id="2_c6yx4"]
[ext_resource type="Texture2D" uid="uid://dhvs4s68d1coh" path="res://Resources/Art/bomb-green.png" id="3_crrwd"]
[ext_resource type="Texture2D" uid="uid://o8hgjtw2lum3" path="res://Imports/Super Package Retro Pixel Effects 32x32 pack 2 Free/03.png" id="4_ny348"]
[ext_resource type="Texture2D" uid="uid://cp37tvukldcs5" path="res://Imports/Super Package Retro Pixel Effects 32x32 pack 2 Free/01.png" id="5_ai6ul"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2dhev"]
atlas = ExtResource("4_ny348")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uhc2"]
atlas = ExtResource("4_ny348")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a10nn"]
atlas = ExtResource("4_ny348")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v32l"]
atlas = ExtResource("4_ny348")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffxup"]
atlas = ExtResource("4_ny348")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcbdj"]
atlas = ExtResource("4_ny348")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v8oc"]
atlas = ExtResource("4_ny348")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u48fg"]
atlas = ExtResource("4_ny348")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdw8"]
atlas = ExtResource("4_ny348")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_432kw"]
atlas = ExtResource("4_ny348")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpd12"]
atlas = ExtResource("4_ny348")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g24t0"]
atlas = ExtResource("4_ny348")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3birg"]
atlas = ExtResource("5_ai6ul")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56y14"]
atlas = ExtResource("5_ai6ul")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gawjv"]
atlas = ExtResource("5_ai6ul")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyiak"]
atlas = ExtResource("5_ai6ul")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y53wy"]
atlas = ExtResource("5_ai6ul")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0sn"]
atlas = ExtResource("5_ai6ul")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxdgj"]
atlas = ExtResource("5_ai6ul")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeus1"]
atlas = ExtResource("5_ai6ul")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qvlp"]
atlas = ExtResource("5_ai6ul")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq8k8"]
atlas = ExtResource("5_ai6ul")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mys7a"]
atlas = ExtResource("5_ai6ul")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik6dv"]
atlas = ExtResource("5_ai6ul")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uu6pi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dhev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uhc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a10nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v32l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffxup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcbdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v8oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u48fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_432kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpd12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g24t0")
}],
"loop": false,
"name": &"explosion",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3birg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56y14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gawjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyiak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y53wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxdgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeus1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qvlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq8k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mys7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik6dv")
}],
"loop": false,
"name": &"idle",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_61h8f"]
radius = 800.0

[sub_resource type="Animation" id="Animation_8gjm2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5ik8x"]
resource_name = "starter"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"expand", -1, 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"expand2", -1, 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.666),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"expand3", -1, 1.0, false],
"method": &"play"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Effect2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Effect3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.666),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cfp62"]
_data = {
&"RESET": SubResource("Animation_8gjm2"),
&"starter": SubResource("Animation_5ik8x")
}

[sub_resource type="Animation" id="Animation_vhdn5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Effect3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Effect1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Effect2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Effect3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cfp62"]
resource_name = "shrink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7.5, 7.5), Vector2(1.225, 1.225)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sxl51"]
resource_name = "shrink2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7.5, 7.5), Vector2(1.225, 1.225)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xncyb"]
resource_name = "shrink3"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7.5, 7.5), Vector2(1.225, 1.225)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c6yx4"]
resource_name = "expand"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_crrwd"]
resource_name = "expand2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gs7w2"]
resource_name = "expand3"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gjm2"]
_data = {
&"RESET": SubResource("Animation_vhdn5"),
&"expand": SubResource("Animation_c6yx4"),
&"expand2": SubResource("Animation_crrwd"),
&"expand3": SubResource("Animation_gs7w2"),
&"shrink": SubResource("Animation_cfp62"),
&"shrink2": SubResource("Animation_sxl51"),
&"shrink3": SubResource("Animation_xncyb")
}

[node name="Explosion_Bomb" type="Node2D"]
top_level = true
script = ExtResource("1_c6yx4")
EXPLOSION_FORCE = 7500

[node name="Effect1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_c6yx4")

[node name="Effect2" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_c6yx4")

[node name="Effect3" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_c6yx4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_crrwd")

[node name="Effect" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_uu6pi")
animation = &"explosion"
frame = 11
frame_progress = 1.0

[node name="ExplosionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource("CircleShape2D_61h8f")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationStarter" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cfp62")
}
autoplay = "starter"
speed_scale = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8gjm2")
}
speed_scale = 0.5

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8gjm2")
}
speed_scale = 0.5

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8gjm2")
}
speed_scale = 0.5

[connection signal="animation_finished" from="Effect" to="." method="_on_effect_animation_finished"]
[connection signal="body_entered" from="ExplosionRadius" to="." method="_on_explosion_radius_body_entered"]
[connection signal="body_exited" from="ExplosionRadius" to="." method="_on_explosion_radius_body_exited"]
